// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksDonutCard render with last selected 1`] = `
<Card
  accented={false}
  aggregated={false}
  aggregatedMini={false}
  cardRef={null}
  className="tasks-donut-card selected-tasks-card"
  matchHeight={false}
>
  <CardTitle
    className=""
    onClick={[Function]}
  />
  <CardBody
    className=""
  >
    <TasksDonutChart
      className=""
      colorsPattern={
        Array [
          "#C315C7",
          "#0089C9",
        ]
      }
      focusedOn="last"
      last={3}
      older={8}
      onLastClick={[Function]}
      onOlderClick={[Function]}
      onTotalClick={[Function]}
      time="week"
    />
  </CardBody>
</Card>
`;

exports[`TasksDonutCard render with minimal props 1`] = `
<Card
  accented={false}
  aggregated={false}
  aggregatedMini={false}
  cardRef={null}
  className="tasks-donut-card"
  matchHeight={false}
>
  <CardTitle
    className=""
    onClick={[Function]}
  />
  <CardBody
    className=""
  >
    <TasksDonutChart
      className=""
      colorsPattern={
        Array [
          "#C315C7",
          "#0089C9",
        ]
      }
      focusedOn="normal"
      last={3}
      older={8}
      onLastClick={[Function]}
      onOlderClick={[Function]}
      onTotalClick={[Function]}
      time="24h"
    />
  </CardBody>
</Card>
`;

exports[`TasksDonutCard render with older selected 1`] = `
<Card
  accented={false}
  aggregated={false}
  aggregatedMini={false}
  cardRef={null}
  className="tasks-donut-card selected-tasks-card"
  matchHeight={false}
>
  <CardTitle
    className=""
    onClick={[Function]}
  />
  <CardBody
    className=""
  >
    <TasksDonutChart
      className=""
      colorsPattern={
        Array [
          "#C315C7",
          "#0089C9",
        ]
      }
      focusedOn="older"
      last={3}
      older={8}
      onLastClick={[Function]}
      onOlderClick={[Function]}
      onTotalClick={[Function]}
      time="week"
    />
  </CardBody>
</Card>
`;

exports[`TasksDonutCard render with props 1`] = `
<Card
  accented={false}
  aggregated={false}
  aggregatedMini={false}
  cardRef={null}
  className="tasks-donut-card some-classname"
  matchHeight={false}
>
  <CardTitle
    className=""
    onClick={[Function]}
  >
    some title
  </CardTitle>
  <CardBody
    className=""
  >
    <TasksDonutChart
      className=""
      colorsPattern={
        Array [
          "#C315C7",
          "#0089C9",
        ]
      }
      focusedOn="normal"
      last={3}
      older={8}
      onLastClick={[Function]}
      onOlderClick={[Function]}
      onTotalClick={[Function]}
      time="week"
    />
  </CardBody>
</Card>
`;

exports[`TasksDonutCard render with total selected 1`] = `
<Card
  accented={false}
  aggregated={false}
  aggregatedMini={false}
  cardRef={null}
  className="tasks-donut-card selected-tasks-card"
  matchHeight={false}
>
  <CardTitle
    className=""
    onClick={[Function]}
  />
  <CardBody
    className=""
  >
    <TasksDonutChart
      className=""
      colorsPattern={
        Array [
          "#C315C7",
          "#0089C9",
        ]
      }
      focusedOn="total"
      last={3}
      older={8}
      onLastClick={[Function]}
      onOlderClick={[Function]}
      onTotalClick={[Function]}
      time="24h"
    />
  </CardBody>
</Card>
`;
